--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenido a mi rama xd</h1>
+    <h1>Bienvenido a mi rama xd  2004 viva chile</h1>
+    <h2>practica de subir la rama</h2>
 </body>
 </html>
